[gd_scene load_steps=2 format=3 uid="uid://cajtfwya0busi"]

[ext_resource type="Script" uid="uid://cyx0uliyrdton" path="res://scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "2048 and Beyond"
horizontal_alignment = 1

[node name="PlayerNameInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Enter Your Name"
alignment = 1

[node name="GridSizeOption" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
alignment = 1

[node name="ModesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ClassicButton" type="Button" parent="VBoxContainer/ModesContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Classic Mode"

[node name="BlitzButton" type="Button" parent="VBoxContainer/ModesContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Blitz Mode"

[node name="ArcadeButton" type="Button" parent="VBoxContainer/ModesContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Arcade Mode"

[node name="LeaderboardButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Leaderboard"

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SoundToggle" type="CheckButton" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sound Effects"

[node name="MusicToggle" type="CheckButton" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Music"

[node name="ASMRToggle" type="CheckButton" parent="VBoxContainer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ASMR Mode"
